--- a/TodoAppHexagon/Views/TodoItem/Index.cshtml
+++ b/TodoAppHexagon/Views/TodoItem/Index.cshtml
@@ -10,7 +10,7 @@
 <div>
     <div>
         <button>
-            <a class="nav-link text-dark" asp-area="" asp-controller="TodoItem" asp-action="AddTodo">Todo</a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="TodoItem" asp-action="AddTodo">Add Todo</a>
         </button>
     </div>
 
@@ -21,6 +21,7 @@
         <tr class="table-dark">
             <th>Title</th>
             <th>IsCompleted</th>
+            <th>Action</th>
         </tr>
         </thead>
         <tbody>
@@ -29,10 +30,10 @@
             <tr class="table-primary">
                 <td>@todo.Title</td>
                 <td>@todo.IsCompleted</td>
-               @* <td>
-                    <a asp-area="Admin" asp-controller="Home" asp-action="EditRoom" asp-route-id="@todo.Id">Edit</a> |
-                    <a asp-area="Admin" asp-controller="Home" asp-action="DeleteRoom" asp-route-id="@room.Id">Remove</a>
-                </td>*@
+                <td>
+                    <a asp-area="" asp-controller="TodoItem" asp-action="UpdateTodo" asp-route-id="@todo.Id">Edit</a> |
+                    @*<a asp-area="Admin" asp-controller="Home" asp-action="DeleteRoom" asp-route-id="@room.Id">Remove</a>*@
+                </td>
             </tr>
         }
         </tbody>
