--- a/TodoAppHexagon/Pages/Shared/_Layout.cshtml
+++ b/TodoAppHexagon/Pages/Shared/_Layout.cshtml
@@ -20,12 +20,6 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TodoItem" asp-action="Index">Todo</a>
                         </li>
                     </ul>
@@ -41,7 +35,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - TodoAppHexagon - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - TodoAppHexagon
         </div>
     </footer>
 
